--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn backend.principal:socket_app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn backend.principal:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /api/saude
